# TVLift

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  ESP-IDF.lnk  PinAssignments.xlsx  concat.py  partitions.csv  tsconfig.json  tvlift.code-workspace
components/frozen/: CMakeLists.txt
components/mongoose/: esp_crypto.c  mg_locals.h
components/rtc/: CMakeLists.txt
data/www/: index.html
firmware/: CMakeLists.txt  PinAssignments.xlsx
firmware/main/: CMakeLists.txt  main.c  pins.h
firmware/main/lift/: lift.c  lift.h
firmware/main/services/: lift_service.c  ota_service.c  settings_service.c  settings_service.h  spiffs_service.c  spiffs_service.h  status_service.c  status_service.h
firmware/main/tasks/blink/: blink_task.c
main/: CMakeLists.txt  Kconfig.projbuild  main.c  shared.h
main/controllers/: controller_base.c  controller_base.h  lift_controller.c  lift_controller.h  upload_controller.c
main/data/www/: index.html
main/data/www/css/: app.css  update.css
main/data/www/js/: about.js  app.js  update.js  vendors~update.js
main/lift/: lift.c  lift.h
main/ota/: ota_service.c  ota_service.h
main/services/: lift_service.c  lift_service.h  logger_service.c  logger_service.h  ota_service.c  ota_service.h  settings_service.c  settings_service.h  spiffs_service.c  status_service.c  status_service.h
main/tasks/blink/: blink_task.c  blink_task.h
main/tasks/webserver/: webserver_task.c  webserver_task.h
main/tasks/webserver/controllers/: controller_base.c  controller_base.h  lift_controller.c  settings_controller.c  settings_controller.h  upload_controller.c  upload_controller.h
main/utilities/: common.h  map.c  map.h  slist.c  slist.h
tools/liftControllerSimulator/: package-lock.json  package.json
tools/liftControllerSimulator/src/: main.js
web/: .env.dev-localhost  .env.dev-tvlift  .eslintrc.js  package-lock.json  package.json  tsconfig.json  tslint.json  vue.config.js
web/public/: index.html
web/src/: App.vue  environment.d.ts  main.ts  router.ts
web/src/components/: Console.vue
web/src/repositories/: liftRepository.ts  settingsRepository.ts
web/src/services/: consoleService.ts  iStatusService.ts  iWebsocketService.ts  sleep.ts  statusService.ts  websocketService.ts
web/src/views/: About.vue  Debug.vue  LiftControls.vue  Settings.vue  Update.vue
web/tools/: websocketServerTester.js
(+12 files in other folders)
